Continuum normalization notebook. Tidy up others.

--- a/Notebooks/Broadcasting_spectrum_one_component_model.ipynb
+++ b/Notebooks/Broadcasting_spectrum_one_component_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Broadcasting on aspectrum - One component model"
+    "# Broadcasting on a spectrum - One component model"
    ]
   },
   {
@@ -20,7 +20,7 @@
     "from scipy.stats import chisquare\n",
     "from PyAstronomy.pyasl import dopplerShift\n",
     "import matplotlib.pyplot as plt\n",
-    "% matplotlib "
+    "% matplotlib"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "def one_comp_model(wav, model1, gammas):\n",
-    "    # Make 2 component simulations, broadcasting over alpha, rv, gamma values.\n",
+    "    # Make 1 component simulations, broadcasting over gamma values.\n",
     "\n",
     "    # Enable single scalar inputs (turn to 1d np.array)\n",
     "    if not hasattr(gammas, \"__len__\"):\n",
@@ -66,7 +66,7 @@
     "\n",
     "w = fits.getdata(wav) / 10\n",
     "h = fits.getdata(host)\n",
-    "c = fits.getdata(comp)\n"
+    "c = fits.getdata(comp)"
    ]
   },
   {
@@ -110,13 +110,15 @@
     "sim_f_orgw = Sim_func(w)\n",
     "\n",
     "sim_w = np.linspace(2114, 2115, 1024)\n",
-    "sim_f = Sim_func(sim_w)\n"
+    "sim_f = Sim_func(sim_w)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Simulate with ocm function\n",
@@ -126,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.close()\n",
@@ -151,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gammas = np.arange(-0.9, 1, 0.015)\n",
@@ -161,16 +167,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "ocm = one_comp_model(w, h, gammas=gammas) "
+    "ocm = one_comp_model(w, h, gammas=gammas)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# One component model\n",
@@ -188,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "chi2 = chisquare(sim_f[:, np.newaxis], ocm_obs).statistic\n",
@@ -198,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "min_indx = np.unravel_index(chi2.argmin(), chi2.shape)\n",
@@ -209,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Compare to ocm generated simulation\n",
@@ -226,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Putting resulted min values back into ocm\n",
@@ -241,7 +259,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(answers)\n",
@@ -255,23 +275,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.close()\n",
     "plt.figure()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.plot(gammas, chi2)\n",
-    "plt.xlabel(\"gammas\")\n",
-    "plt.ylabel(\"Chisquare\")\n"
    ]
   },
   {
@@ -283,13 +293,29 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.contourf(chi2[:,1,:])\n"
+    "plt.plot(gammas, chi2)\n",
+    "plt.xlabel(\"gammas\")\n",
+    "plt.ylabel(\"Chisquare\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.contourf(chi2[:,1,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.close()\n",
@@ -326,5 +352,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
