Update spectrum normalization with tried methods.

--- a/Notebooks/Spectrum_Normalizations.ipynb
+++ b/Notebooks/Spectrum_Normalizations.ipynb
@@ -37,6 +37,7 @@
     "import numpy as np\n",
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -66,10 +67,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "The two PHOENIX ACES spectra here are the first best guess of the two spectral components."
    ]
@@ -109,11 +108,6 @@
     "plt.xlabel(\"Wavelength (nm)\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -342,15 +336,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Attempting the Passegger method"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Try the method:\n",
+    "\n",
     "from scipy.interpolate import interp1d\n",
-    "mix1_norm = local_normalization(wav_model, mix1, splits=50, method=\"linear\", plot=True)\n",
-    "mix2_norm = local_normalization(wav_model, mix2, splits=50, method=\"linear\", plot=True)\n",
+    "mix1_norm = local_normalization(wav_model, mix1, splits=50, method=\"linear\", plot=False)\n",
+    "mix2_norm = local_normalization(wav_model, mix2, splits=50, method=\"linear\", plot=False)\n",
     "obs_norm = local_normalization(obs[\"wavelength\"], obs[\"flux\"], splits=20, method=\"linear\", plot=True)\n",
     "\n",
     "normalization1 = mix1 / mix1_norm\n",
@@ -366,8 +367,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(obs[\"wavelength\"], obs_renorm1)\n",
+    "# Just a scalar\n",
+    "mix1_norm = local_normalization(wav_model, mix1, splits=50, method=\"scalar\", plot=False)\n",
+    "mix2_norm = local_normalization(wav_model, mix2, splits=50, method=\"scalar\", plot=False)\n",
+    "obs_norm = local_normalization(obs[\"wavelength\"], obs[\"flux\"], splits=20, method=\"scalar\", plot=True)\n",
+    "scalar1 = mix1 / mix1_norm\n",
+    "scalar2 = mix2 / mix2_norm\n",
+    "print(scalar2)\n",
+    "obs_renorm_scalar1 = obs_norm * interp1d(wav_model, scalar1)(obs[\"wavelength\"])\n",
+    "obs_renorm_scalar2 = obs_norm * interp1d(wav_model, scalar2)(obs[\"wavelength\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(obs[\"wavelength\"], obs[\"flux\"],  label=\"obs\", alpha =0.3)\n",
+    "plt.plot(obs[\"wavelength\"], obs_renorm1, label=\"linear norm\")\n",
+    "plt.plot(obs[\"wavelength\"], obs_renorm_scalar1, label=\"scalar norm\")\n",
     "plt.plot(wav_model[mask], mix1[mask], label=\"mix 1%\")\n",
+    "plt.legend()\n",
+    "plt.title(\"1% model\")\n",
+    "plt.hlines(1, 2111, 2124, linestyle=\"--\", alpha=0.2)\n",
+    "plt.show()\n",
+    "\n",
+    "plt.plot(obs[\"wavelength\"], obs[\"flux\"],  label=\"obs\", alpha =0.3)\n",
+    "plt.plot(obs[\"wavelength\"], obs_renorm1, label=\"linear norm\")\n",
+    "plt.plot(obs[\"wavelength\"], obs_renorm_scalar1, label=\"scalar norm\")\n",
+    "plt.plot(wav_model[mask], mix1[mask], label=\"mix 1%\")\n",
+    "plt.legend()\n",
+    "plt.title(\"1% model, zoom\")\n",
+    "plt.xlim([2120, 2122])\n",
+    "plt.hlines(1, 2111, 2124, linestyle=\"--\", alpha=0.2)\n",
     "plt.show()"
    ]
   },
@@ -377,19 +410,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(obs[\"wavelength\"], obs_renorm2)\n",
+    "plt.plot(obs[\"wavelength\"], obs[\"flux\"],  label=\"obs\", alpha =0.3)\n",
+    "plt.plot(obs[\"wavelength\"], obs_renorm2, label=\"linear norm\")\n",
+    "plt.plot(obs[\"wavelength\"], obs_renorm_scalar2, label=\"scalar norm\")\n",
     "plt.plot(wav_model[mask], mix2[mask], label=\"mix 5%\")\n",
+    "plt.legend()\n",
+    "plt.title(\"5% model\")\n",
+    "plt.hlines(1, 2111, 2124, linestyle=\"--\", alpha=0.2)\n",
+    "plt.show()\n",
+    "\n",
+    "plt.plot(obs[\"wavelength\"], obs[\"flux\"],  label=\"obs\", alpha =0.3)\n",
+    "plt.plot(obs[\"wavelength\"], obs_renorm2, label=\"linear norm\")\n",
+    "plt.plot(obs[\"wavelength\"], obs_renorm_scalar2, label=\"scalar norm\")\n",
+    "plt.plot(wav_model[mask], mix2[mask], label=\"mix 5%\")\n",
+    "plt.legend()\n",
+    "plt.title(\"5% model zoomed\")\n",
+    "plt.xlim([2120, 2122])\n",
+    "plt.hlines(1, 2111, 2124, linestyle=\"--\", alpha=0.2)\n",
     "plt.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "In this example for the 5% companion spectra there is a bit of difference between the linear and scalar normalizations. With a larger difference at the longer wavelength. (more orange visible above the red.)  Faint blue is the spectrum before the renormalization."
+   ]
   },
   {
    "cell_type": "code",
