Fix up spectrum_overload import

--- a/Notebooks/Inherient_alpha_ratio_test.ipynb
+++ b/Notebooks/Inherient_alpha_ratio_test.ipynb
@@ -14,7 +14,7 @@
     "import numpy as np\n",
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt\n",
-    "from spectrum_overload.Spectrum import Spectrum"
+    "from spectrum_overload import Spectrum"
    ]
   },
   {
