--- a/Notebooks/Detector Masking.ipynb
+++ b/Notebooks/Detector Masking.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "from utilities import masking\n",
-    "from spectrum_overload.Spectrum import Spectrum\n",
+    "from spectrum_overload import Spectrum\n",
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
