--- a/Notebooks/SNR checks.ipynb
+++ b/Notebooks/SNR checks.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "from utilities import masking\n",
     "import numpy as np\n",
-    "from spectrum_overload.Spectrum import Spectrum\n",
+    "from spectrum_overload import Spectrum\n",
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
