Fix doppler shift. wavelength shift is positive

--- a/Notebooks/Broadcasting_spectrum_two_component_model.ipynb
+++ b/Notebooks/Broadcasting_spectrum_two_component_model.ipynb
@@ -51,7 +51,7 @@
     "    for i, rv in enumerate(rvs):\n",
     "        #nflux, wlprime = dopplerShift(wav, am2, rv)\n",
     "        #am2rv[:, :, i] = nflux\n",
-    "        wav_i = (1 - rv / c) * wav\n",
+    "        wav_i = (1 + rv / c) * wav\n",
     "        am2rv[:, :, i] = interp1d(wav_i, am2, axis=0, bounds_error=False)(wav)\n",
     "    \n",
     "    # Normalize by (1 / 1 + alpha)\n",
@@ -62,7 +62,7 @@
     "    \n",
     "    am2rvm1g = np.empty(am2rvm1.shape + (len(gammas),))   # am2rvm1g = am2rvm1 with gamma doppler-shift\n",
     "    for j, gamma in enumerate(gammas):\n",
-    "        wav_j = (1 - gamma / 299792.458) * wav\n",
+    "        wav_j = (1 + gamma / 299792.458) * wav\n",
     "        am2rvm1g[:, :, :, j] = interp1d(wav_j, am2rvm1, axis=0, bounds_error=False)(wav)\n",
     "    \n",
     "    return interp1d(w, am2rvm1g, axis=0)    # pass it the wavelength values to return\n",
@@ -124,7 +124,7 @@
     "\n",
     "# COMPACT SIMULATION\n",
     "comp = interp1d((1 + s_rv / c_kms) * w, s_alpha * c, bounds_error=False)(w)\n",
-    "Sim_func = interp1d((1 - s_gamma / c_kms) * w, (h + comp) / (1 + s_alpha), bounds_error=False, axis=0)\n",
+    "Sim_func = interp1d((1 + s_gamma / c_kms) * w, (h + comp) / (1 + s_alpha), bounds_error=False, axis=0)\n",
     "sim_f_orgw = Sim_func(w)\n",
     "\n",
     "sim_w = np.linspace(2114, 2115, 1024)\n",
