--- a/Notebooks/chi2_parameter_broadcasting.ipynb
+++ b/Notebooks/chi2_parameter_broadcasting.ipynb
@@ -346,7 +346,7 @@
    "outputs": [],
    "source": [
     "c = 500\n",
-    "vc = (1 - np.arange(10) / c)\n",
+    "vc = (1 + np.arange(10) / c)\n",
     "print(wm.shape)\n",
     "print(vc.shape)\n",
     "doppler =  wm[:, np.newaxis] *  vc\n",
