adjsut imports in Notebooks

--- a/Notebooks/Comparing_starfish_and_phoenix.ipynb
+++ b/Notebooks/Comparing_starfish_and_phoenix.ipynb
@@ -28,7 +28,7 @@
    ],
    "source": [
     "from spectrum_overload import Spectrum\n",
-    "from utilities.phoenix_utils import load_starfish_spectrum\n",
+    "from mingle.utilities.phoenix_utils import load_starfish_spectrum\n",
     "\n",
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt"
