--- a/Notebooks/Comparing_synthetic_spectra.ipynb
+++ b/Notebooks/Comparing_synthetic_spectra.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utilities.phoenix_utils import load_starfish_spectrum\n"
+    "from mingle.utilities.phoenix_utils import load_starfish_spectrum\n"
    ]
   },
   {
