--- a/Notebooks/Detector Masking.ipynb
+++ b/Notebooks/Detector Masking.ipynb
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "from utilities import masking\n",
+    "from mingle.utilities import masking\n",
     "from spectrum_overload import Spectrum\n",
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt\n",
