--- a/Notebooks/Diagnose fake spectrum normalization.ipynb
+++ b/Notebooks/Diagnose fake spectrum normalization.ipynb
@@ -35,8 +35,8 @@
     "from spectrum_overload import Spectrum\n",
     "from models.broadcasted_models import inherent_alpha_model, independent_inherent_alpha_model\n",
     "from simulators.iam_module import prepare_iam_model_spectra, continuum_alpha\n",
-    "from utilities.norm import continuum\n",
-    "from utilities.simulation_utilities import spec_max_delta\n"
+    "from mingle.utilities.norm import continuum\n",
+    "from mingle.utilities.simulation_utilities import spec_max_delta\n"
    ]
   },
   {
