--- a/Notebooks/Test_fake_data.ipynb
+++ b/Notebooks/Test_fake_data.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "from spectrum_overload import Spectrum\n",
-    "from utilities.phoenix_utils import load_starfish_spectrum\n",
+    "from mingle.utilities.phoenix_utils import load_starfish_spectrum\n",
     "\n",
     "from models.broadcasted_models import inherent_alpha_model\n",
     "\n",
