--- a/Notebooks/bhm_HD211847.ipynb
+++ b/Notebooks/bhm_HD211847.ipynb
@@ -28,7 +28,7 @@
     "sys.path.append(\"../../\")\n",
     "sys.path.append(\"../\")\n",
     "import param_file\n",
-    "# from utilities.param_file import parse_paramfile\n",
+    "# from mingle.utilities.param_file import parse_paramfile\n",
     "#from best_host_model_HD211847 import main\n",
     "\n",
     "from param_file import parse_paramfile\n",
