--- a/Notebooks/Fake_with_large_offsets.ipynb
+++ b/Notebooks/Fake_with_large_offsets.ipynb
@@ -23,12 +23,12 @@
    "outputs": [],
    "source": [
     "from spectrum_overload import Spectrum\n",
-    "from utilities.phoenix_utils import load_starfish_spectrum\n",
+    "from mingle.utilities.phoenix_utils import load_starfish_spectrum\n",
     "\n",
     "from models.broadcasted_models import inherent_alpha_model, independent_inherent_alpha_model\n",
     " \n",
     "from scipy.stats import chisquare\n",
-    "from utilities.chisqr import chi_squared\n",
+    "from mingle.utilities.chisqr import chi_squared\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -220,14 +220,14 @@
     {
      "ename": "TypeError",
      "evalue": "inherent_alpha_model() got an unexpected keyword argument 'independent_rv'",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-5-fe6dc0e534ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"fake data\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     fake_data = join_with_broadcast_spectrum(mod1_spec_scaled, mod2_spec_scaled,\n\u001b[0;32m---> 32\u001b[0;31m                                              rv, gamma, sample_x, independent=independent)\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     gamma_grid_data = join_with_broadcast(mod1_spec_scaled, mod2_spec_scaled,\n",
       "\u001b[0;32m<ipython-input-5-fe6dc0e534ea>\u001b[0m in \u001b[0;36mjoin_with_broadcast_spectrum\u001b[0;34m(mod1, mod2, rv, gamma, new_x, independent)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         broadcast_result = inherent_alpha_model(mod1.xaxis, mod1.flux, mod2.flux,\n\u001b[0;32m----> 7\u001b[0;31m                                                 rvs=rv, gammas=gamma, independent_rv=True)\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mbroadcast_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbroadcast_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: inherent_alpha_model() got an unexpected keyword argument 'independent_rv'"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
