--- a/Notebooks/SNR checks.ipynb
+++ b/Notebooks/SNR checks.ipynb
@@ -16,7 +16,7 @@
    },
    "outputs": [],
    "source": [
-    "from utilities import masking\n",
+    "from mingle.utilities import masking\n",
     "import numpy as np\n",
     "from spectrum_overload import Spectrum\n",
     "from astropy.io import fits\n",
