Specifically set extra_offset to None for all/most barycorrections.

--- a/Notebooks/bhm_HD211847.ipynb
+++ b/Notebooks/bhm_HD211847.ipynb
@@ -76,7 +76,7 @@
     "# Load observation\n",
     "uncorrected_spectra = load_spectrum(obs_name)\n",
     "observed_spectra = load_spectrum(obs_name)\n",
-    "observed_spectra = barycorr_crires_spectrum(observed_spectra, -22)\n",
+    "observed_spectra = barycorr_crires_spectrum(observed_spectra, extra_offset=None)\n",
     "observed_spectra.flux /= 1.02"
    ]
   },
