obs_num -> obsnum  everywhere

--- a/Notebooks/bhm_HD211847.ipynb
+++ b/Notebooks/bhm_HD211847.ipynb
@@ -57,9 +57,9 @@
     "comp = \"\"   # set to b or c if needed\n",
     "param_file = \"/home/jneal/Phd/data/parameter_files/{}{}_params.dat\".format(star, comp)\n",
     "host_parameters = parse_paramfile(param_file, path=None)\n",
-    "obs_num = 1\n",
+    "obsnum = 1\n",
     "chip = 1\n",
-    "obs_name_org = select_observation(star, obs_num, chip)\n",
+    "obs_name_org = select_observation(star, obsnum, chip)\n",
     "obs_name_new = handy_path(star, chip)\n",
     "print(obs_name_org)\n",
     "print(obs_name_new)"
