by Default use 1/sigma noise. Add option to use mu instead.

--- a/Notebooks/Diagnose fake spectrum normalization.ipynb
+++ b/Notebooks/Diagnose fake spectrum normalization.ipynb
@@ -97,8 +97,9 @@
     "    #grid_spectrum = Spectrum(xaxis=wav, flux=iam_grid_models)\n",
     "    #iam_grid_models = grid_spectrum.normalize(\"exponential\")\n",
     "    # Add the noise\n",
+    "    from mingle.utilities.simulation_utilities import add_noise\n",
     "    if snr is not None:\n",
-    "        iam_grid_models += (1. / snr) * np.random.randn(*iam_grid_models.shape)\n",
+    "        iam_grid_models = add_noise(iam_grid_models, snr)\n",
     "\n",
     "    if np.any(np.isnan(iam_grid_models)):\n",
     "        print(\"there was some nans\")\n",
