--- a/Notebooks/Broadcasting_spectrum_one_component_model.ipynb
+++ b/Notebooks/Broadcasting_spectrum_one_component_model.ipynb
@@ -20,7 +20,7 @@
     "from scipy.stats import chisquare\n",
     "from PyAstronomy.pyasl import dopplerShift\n",
     "import matplotlib.pyplot as plt\n",
-    "% matplotlib"
+    "% matplotlib\n"
    ]
   },
   {
