--- a/Notebooks/Detector Masking.ipynb
+++ b/Notebooks/Detector Masking.ipynb
@@ -22,7 +22,7 @@
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "%matplotlib inline"
+    "% matplotlib inline\n"
    ]
   },
   {
