--- a/Notebooks/Diagnose fake spectrum normalization.ipynb
+++ b/Notebooks/Diagnose fake spectrum normalization.ipynb
@@ -251,9 +251,8 @@
     "gamma = 20\n",
     "rv = -7\n",
     "\n",
-    "\n",
     "main(\"test\", \"1\", params1, params2, gamma, rv,\n",
-    "         independent=False, noise=None, suffix=None)"
+    "     independent=False, noise=None, suffix=None)\n"
    ]
   },
   {
