--- a/Notebooks/Fake_with_large_offsets.ipynb
+++ b/Notebooks/Fake_with_large_offsets.ipynb
@@ -26,13 +26,13 @@
     "from mingle.utilities.phoenix_utils import load_starfish_spectrum\n",
     "\n",
     "from models.broadcasted_models import inherent_alpha_model, independent_inherent_alpha_model\n",
-    " \n",
+    "\n",
     "from scipy.stats import chisquare\n",
     "from mingle.utilities.chisqr import chi_squared\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from scipy.interpolate import interp1d"
+    "from scipy.interpolate import interp1d\n"
    ]
   },
   {
