--- a/Notebooks/Inherient_alpha_ratio_test.ipynb
+++ b/Notebooks/Inherient_alpha_ratio_test.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "wav_model = fits.getdata(\"/home/jneal/Phd/data/PHOENIX-ALL/PHOENIX/WAVE_PHOENIX-ACES-AGSS-COND-2011.fits\")\n",
-    "wav_model /= 10   # nm\n",
+    "wav_model /= 10  # nm\n",
     "host = \"/home/jneal/Phd/data/PHOENIX-ALL/PHOENIX/HD30501-lte05200-4.50-0.0.PHOENIX-ACES-AGSS-COND-2011-HiRes.fits\"\n",
     "companion = \"/home/jneal/Phd/data/PHOENIX-ALL/PHOENIX/HD30501b-lte02500-5.00-0.0.PHOENIX-ACES-AGSS-COND-2011-HiRes.fits\"\n",
     "host = \"/home/jneal/Phd/data/PHOENIX-ALL/PHOENIX/Z-0.0/lte05200-4.50-0.0.PHOENIX-ACES-AGSS-COND-2011-HiRes.fits\"\n",
@@ -41,10 +41,9 @@
     "plt.show()\n",
     "\n",
     "mask = (2000 < wav_model) & (wav_model < 2200)\n",
-    "wav_model = wav_model[mask] \n",
-    "host_f = host_f[mask] \n",
-    "comp_f = comp_f[mask] \n",
-    "\n",
+    "wav_model = wav_model[mask]\n",
+    "host_f = host_f[mask]\n",
+    "comp_f = comp_f[mask]\n",
     "\n",
     "plt.plot(wav_model, host_f, label=\"Host\")\n",
     "plt.plot(wav_model, comp_f, label=\"Companion\")\n",
@@ -61,7 +60,7 @@
     "\n",
     "print(spec_comp.flux)\n",
     "normal_ratio = spec_host / spec_comp\n",
-    "print(\"normal_ratio\", np.mean(normal_ratio.flux), np.std(normal_ratio.flux))"
+    "print(\"normal_ratio\", np.mean(normal_ratio.flux), np.std(normal_ratio.flux))\n"
    ]
   },
   {
