--- a/Notebooks/Spectrum_Normalizations.ipynb
+++ b/Notebooks/Spectrum_Normalizations.ipynb
@@ -36,8 +36,8 @@
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%matplotlib inline\n",
-    "#%matplotlib auto "
+    "% matplotlib inline\n",
+    "#%matplotlib auto\n"
    ]
   },
   {
