--- a/Notebooks/Test Grid slicing plotting.ipynb
+++ b/Notebooks/Test Grid slicing plotting.ipynb
@@ -24,20 +24,19 @@
    "outputs": [],
    "source": [
     "def plot_iam_grid_slices(x, y, z, grid):\n",
-    "    X, Y, Z = np.meshgrid(x, y, z, indexing =\"ij\")\n",
+    "    X, Y, Z = np.meshgrid(x, y, z, indexing=\"ij\")\n",
     "\n",
     "    for ii, y_val in enumerate(y):\n",
-    "\n",
     "        ax = plt.subplot(111)\n",
     "\n",
-    "        cmap = ax.contour(X[:,ii , :], Z[:, ii, :], grid[:, ii, :])\n",
+    "        cmap = ax.contour(X[:, ii, :], Z[:, ii, :], grid[:, ii, :])\n",
     "        plt.colorbar(cmap)\n",
     "        ax.plot\n",
     "        ax.set_title(\"grid slice for y={}\".format(y_val))\n",
     "        plt.show()\n",
-    "        #pltname = os.path.join(simulators.paths[], \"grid_plots\",\n",
+    "        # pltname = os.path.join(simulators.paths[], \"grid_plots\",\n",
     "        #                      \"grid_slice\")\n",
-    "        #plt.savefig(\".png\")\n",
+    "        # plt.savefig(\".png\")\n",
     "\n",
     "    for jj, z_val in enumerate(z):\n",
     "        ax = plt.subplot(111)\n",
@@ -47,10 +46,10 @@
     "        ax.plot\n",
     "        ax.set_title(\"grid slice for z={}\".format(z_val))\n",
     "        plt.show()\n",
-    "        #pltname = os.path.join(simulators.paths[], \"grid_plots\",\n",
+    "        # pltname = os.path.join(simulators.paths[], \"grid_plots\",\n",
     "        #                       \"grid_slice\")\n",
-    "        #print(pltname)\n",
-    "        # plt.savefig(\".png\")"
+    "        # print(pltname)\n",
+    "        # plt.savefig(\".png\")\n"
    ]
   },
   {
