--- a/Notebooks/Testing Bhm output and fake spectra again.ipynb
+++ b/Notebooks/Testing Bhm output and fake spectra again.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test plotting the test spectra\n",
-    "\n"
+    "# Test plotting the test spectra\n"
    ]
   },
   {
