--- a/Notebooks/bhm_HD211847.ipynb
+++ b/Notebooks/bhm_HD211847.ipynb
@@ -32,7 +32,7 @@
     "#from best_host_model_HD211847 import main\n",
     "\n",
     "from param_file import parse_paramfile\n",
-    "from Chisqr_of_observation import select_observation, load_spectrum"
+    "from Chisqr_of_observation import select_observation, load_spectrum\n"
    ]
   },
   {
