--- a/Notebooks/chi2_parameter_broadcasting.ipynb
+++ b/Notebooks/chi2_parameter_broadcasting.ipynb
@@ -24,7 +24,7 @@
     "import scipy as sp\n",
     "from scipy.stats import chisquare\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "% matplotlib inline\n"
    ]
   },
   {
