--- a/Notebooks/Broadcasting_spectrum_area_ratio_model.ipynb
+++ b/Notebooks/Broadcasting_spectrum_area_ratio_model.ipynb
@@ -22,7 +22,7 @@
     "from scipy.stats import chisquare\n",
     "from PyAstronomy.pyasl import dopplerShift\n",
     "import matplotlib.pyplot as plt\n",
-    "% matplotlib "
+    "% matplotlib\n"
    ]
   },
   {
@@ -43,19 +43,19 @@
     "\n",
     "    m1 = model1\n",
     "    print(model1.shape)\n",
-    "    \n",
-    "    m1g = np.empty(model1.shape + (len(gammas),))   # am2rvm1g = am2rvm1 with gamma doppler-shift\n",
+    "\n",
+    "    m1g = np.empty(model1.shape + (len(gammas),))  # am2rvm1g = am2rvm1 with gamma doppler-shift\n",
     "    print(m1g.shape)\n",
     "    for j, gamma in enumerate(gammas):\n",
     "        wav_j = (1 + gamma / 299792.458) * wav\n",
     "        m1g[:, j] = interp1d(wav_j, m1, axis=0, bounds_error=False)(wav)\n",
-    "    \n",
-    "    return interp1d(w, m1g, axis=0)    # pass it the wavelength values to return\n",
+    "\n",
+    "    return interp1d(w, m1g, axis=0)  # pass it the wavelength values to return\n",
     "\n",
     "\n",
     "def fix_component_model():\n",
     "    \"\"\"Use area ratio from spectrum headers\"\"\"\n",
-    "pass"
+    "pass\n"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "\n",
     "sim_f.shape\n",
     "\n",
-    "# sim_w, sim_f are the observations to perform chisquared against!"
+    "# sim_w, sim_f are the observations to perform chisquared against!\n"
    ]
   },
   {
@@ -191,8 +191,8 @@
    "outputs": [],
    "source": [
     "# One component model\n",
-    "ocm_obs = ocm(sim_w)          # Interpolate to observed values.\n",
-    "ocm_obs.shape"
+    "ocm_obs = ocm(sim_w)  # Interpolate to observed values.\n",
+    "ocm_obs.shape\n"
    ]
   },
   {
@@ -242,8 +242,8 @@
     "#ocm_chi2_ocm = chisquare(ocm_sim_f[:, np.newaxis], ocm_obs).statistic\n",
     "#min_indx_ocm = np.unravel_index(chi2.argmin(), chi2.shape)\n",
     "print(\"sim results =\", gammas[min_indx[0]])\n",
-    "print(\"ocm results =\", gammas[min_indx_ocm[0]])     # observation simulated with the ocm model\n",
-    "print(\"answer\", answers)"
+    "print(\"ocm results =\", gammas[min_indx_ocm[0]])  # observation simulated with the ocm model\n",
+    "print(\"answer\", answers)\n"
    ]
   },
   {
