--- a/Notebooks/Broadcasting_spectrum_two_component_model.ipynb
+++ b/Notebooks/Broadcasting_spectrum_two_component_model.ipynb
@@ -44,7 +44,7 @@
     "        print(len(gammas))\n",
     "\n",
     "    am2 = model2[:,np.newaxis] * alphas           # alpha * Model2 (am2)\n",
-    "    print(am2.shape) \n",
+    "    # print(am2.shape)\n",
     "    \n",
     "    am2rv = np.empty(am2.shape + (len(rvs),))     # am2rv = am2 with rv doppler-shift\n",
     "    print(am2rv.shape)\n",
