--- a/Notebooks/Diagnose fake spectrum normalization.ipynb
+++ b/Notebooks/Diagnose fake spectrum normalization.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "\n",
     "def fake_simulation(wav, params1, params2, gamma, rv, chip=None,\n",
-    "                    limits=[2070, 2180], independent=False, noise=None):\n",
+    "                    limits=(2070, 2180), independent=False, noise=None):\n",
     "    \"\"\"Make a fake spectrum with binary params and radial velocities.\"\"\"\n",
     "    mod1_spec, mod2_spec = prepare_iam_model_spectra(params1, params2, limits)\n",
     "    \n",
