Remove Independant RV simulation to simplify code a little. (Remove that possibility) (It was also failing some tests)

--- a/Notebooks/Fake_with_large_offsets.ipynb
+++ b/Notebooks/Fake_with_large_offsets.ipynb
@@ -25,7 +25,7 @@
     "from spectrum_overload import Spectrum\n",
     "from mingle.utilities.phoenix_utils import load_starfish_spectrum\n",
     "\n",
-    "from models.broadcasted_models import inherent_alpha_model, independent_inherent_alpha_model\n",
+    "from models.broadcasted_models import inherent_alpha_model\n",
     "\n",
     "from scipy.stats import chisquare\n",
     "from mingle.utilities.chisqr import chi_squared\n",
@@ -231,25 +231,17 @@
     }
    ],
    "source": [
-    "def join_with_broadcast_spectrum(mod1, mod2, rv, gamma, new_x, independent=False):\n",
-    "    if independent:\n",
-    "        broadcast_result = independent_inherent_alpha_model(mod1.xaxis, mod1.flux, mod2.flux,\n",
-    "                                                rvs=rv, gammas=gamma, independent_rv=True)\n",
-    "    else:\n",
-    "        broadcast_result = inherent_alpha_model(mod1.xaxis, mod1.flux, mod2.flux,\n",
-    "                                                rvs=rv, gammas=gamma, independent_rv=True)\n",
+    "def join_with_broadcast_spectrum(mod1, mod2, rv, gamma, new_x):\n",
+    "    broadcast_result = inherent_alpha_model(mod1.xaxis, mod1.flux, mod2.flux,\n",
+    "                                            rvs=rv, gammas=gamma)\n",
     "\n",
     "    broadcast_values = broadcast_result(new_x)\n",
     "    return Spectrum(flux=broadcast_values.squeeze(), xaxis=new_x)\n",
     "    \n",
     "\n",
-    "def join_with_broadcast(mod1, mod2, rv, gamma, new_x, independent=False):\n",
-    "    if independent:\n",
-    "        broadcast_result = independent_inherent_alpha_model(mod1.xaxis, mod1.flux, mod2.flux,\n",
-    "                                                rvs=rv, gammas=gamma, independent_rv=True)\n",
-    "    else:\n",
-    "        broadcast_result = inherent_alpha_model(mod1.xaxis, mod1.flux, mod2.flux,\n",
-    "                                                rvs=rv, gammas=gamma, independent_rv=True)\n",
+    "def join_with_broadcast(mod1, mod2, rv, gamma, new_x):\n",
+    "    broadcast_result = inherent_alpha_model(mod1.xaxis, mod1.flux, mod2.flux,\n",
+    "                                            rvs=rv, gammas=gamma)\n",
     "    broadcast_values = broadcast_result(new_x)\n",
     "    return  broadcast_values.squeeze()\n",
     "\n",
@@ -257,57 +249,51 @@
     "rvs = np.linspace(-100, 100, 60)\n",
     "\n",
     "\n",
-    "for independent in (True, False):\n",
-    "    print(\"independant \", independent)\n",
+    "print(\"fake data\")\n",
+    "fake_data = join_with_broadcast_spectrum(mod1_spec_scaled, mod2_spec_scaled,\n",
+    "                                         rv, gamma, sample_x)\n",
     "\n",
-    "    print(\"fake data\")\n",
-    "    fake_data = join_with_broadcast_spectrum(mod1_spec_scaled, mod2_spec_scaled,\n",
-    "                                             rv, gamma, sample_x, independent=independent)\n",
+    "gamma_grid_data = join_with_broadcast(mod1_spec_scaled, mod2_spec_scaled,\n",
+    "                                      [-6], gammas, sample_x)\n",
+    "rv_grid_data = join_with_broadcast(mod1_spec_scaled, mod2_spec_scaled, rvs,\n",
+    "                                   [10], sample_x)\n",
+    "dual_grid_data = join_with_broadcast(mod1_spec_scaled, mod2_spec_scaled,\n",
+    "                                     rvs, gammas, sample_x)\n",
     "\n",
-    "    gamma_grid_data = join_with_broadcast(mod1_spec_scaled, mod2_spec_scaled,\n",
-    "                                          [-6], gammas, sample_x, independent=independent)\n",
-    "    rv_grid_data = join_with_broadcast(mod1_spec_scaled, mod2_spec_scaled, rvs,\n",
-    "                                       [10], sample_x, independent=independent)\n",
-    "    dual_grid_data = join_with_broadcast(mod1_spec_scaled, mod2_spec_scaled,\n",
-    "                                         rvs, gammas, sample_x, independent=independent)\n",
-    "\n",
-    "    for normalize in (True, False):\n",
-    "        print(\"normalizing\", normalize)\n",
-    "        \n",
+    "for normalize in (True, False):\n",
+    "    print(\"normalizing\", normalize)\n",
     "    \n",
-    "        fake_data.remove_nans()\n",
     "\n",
-    "        print(fake_data.flux.shape)\n",
-    "        print(gamma_grid_data.shape)\n",
-    "        print(rv_grid_data.shape)\n",
-    "        print(dual_grid_data.shape)\n",
+    "    fake_data.remove_nans()\n",
     "\n",
-    "        gamma_chi2 = chi_squared(fake_data.flux[:, np.newaxis], gamma_grid_data)\n",
-    "        rv_chi2 = chi_squared(fake_data.flux[:, np.newaxis], rv_grid_data)\n",
-    "        dual_chi2 = chi_squared(fake_data.flux[:, np.newaxis, np.newaxis], dual_grid_data)\n",
-    "        \n",
+    "    print(fake_data.flux.shape)\n",
+    "    print(gamma_grid_data.shape)\n",
+    "    print(rv_grid_data.shape)\n",
+    "    print(dual_grid_data.shape)\n",
     "\n",
-    "        plt.plot(gammas, gamma_chi2)\n",
-    "        plt.title(\"gamma chi2\")\n",
-    "        plt.show()\n",
+    "    gamma_chi2 = chi_squared(fake_data.flux[:, np.newaxis], gamma_grid_data)\n",
+    "    rv_chi2 = chi_squared(fake_data.flux[:, np.newaxis], rv_grid_data)\n",
+    "    dual_chi2 = chi_squared(fake_data.flux[:, np.newaxis, np.newaxis], dual_grid_data)\n",
+    "    \n",
     "\n",
-    "        plt.plot(rvs, rv_chi2)\n",
-    "        plt.title(\"rv chi2\")\n",
-    "        plt.show()\n",
+    "    plt.plot(gammas, gamma_chi2)\n",
+    "    plt.title(\"gamma chi2\")\n",
+    "    plt.show()\n",
     "\n",
-    "        gam, rv_grid = np.meshgrid(gammas, rvs)\n",
-    "        plt.contourf(gam, rv_grid, dual_chi2)\n",
-    "        plt.title(\"dual chi2 - gamma {}, rv {}\".format(gamma, rv))\n",
-    "        plt.xlabel(\"gamma\")\n",
-    "        plt.ylabel(\"rv\")\n",
-    "        plt.colorbar()\n",
-    "        if independent:\n",
-    "            plt.plot(gamma, rv, \"rx\")\n",
-    "        else:\n",
-    "            plt.plot(gamma, gamma + rv, \"rx\")\n",
-    "        plt.show()\n",
+    "    plt.plot(rvs, rv_chi2)\n",
+    "    plt.title(\"rv chi2\")\n",
+    "    plt.show()\n",
     "\n",
-    "        dof = len(fake_data.xaxis) - 1\n"
+    "    gam, rv_grid = np.meshgrid(gammas, rvs)\n",
+    "    plt.contourf(gam, rv_grid, dual_chi2)\n",
+    "    plt.title(\"dual chi2 - gamma {}, rv {}\".format(gamma, rv))\n",
+    "    plt.xlabel(\"gamma\")\n",
+    "    plt.ylabel(\"rv\")\n",
+    "    plt.colorbar()\n",
+    "    plt.plot(gamma, gamma + rv, \"rx\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    dof = len(fake_data.xaxis) - 1\n"
    ]
   },
   {
