--- a/Notebooks/Diagnose fake spectrum normalization.ipynb
+++ b/Notebooks/Diagnose fake spectrum normalization.ipynb
@@ -33,7 +33,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from spectrum_overload import Spectrum\n",
-    "from models.broadcasted_models import inherent_alpha_model, independent_inherent_alpha_model\n",
+    "from models.broadcasted_models import inherent_alpha_model\n",
     "from simulators.iam_module import prepare_iam_model_spectra, continuum_alpha\n",
     "from mingle.utilities.norm import continuum\n",
     "from mingle.utilities.simulation_utilities import spec_max_delta\n"
@@ -47,7 +47,7 @@
    "source": [
     "\n",
     "def fake_simulation(wav, params1, params2, gamma, rv, chip=None,\n",
-    "                    limits=(2070, 2180), independent=False, noise=None):\n",
+    "                    limits=(2070, 2180), noise=None):\n",
     "    \"\"\"Make a fake spectrum with binary params and radial velocities.\"\"\"\n",
     "    mod1_spec, mod2_spec = prepare_iam_model_spectra(params1, params2, limits)\n",
     "    \n",
@@ -60,11 +60,7 @@
     "        print(\"inherent flux ratio = {}, chip={}\".format(inherent_alpha, chip))\n",
     "\n",
     "    # Combine model spectra with iam model\n",
-    "    if independent:\n",
-    "        iam_grid_func = independent_inherent_alpha_model(mod1_spec.xaxis, mod1_spec.flux, mod2_spec.flux,\n",
-    "                                                         rvs=rv, gammas=gamma)\n",
-    "    else:\n",
-    "        iam_grid_func = inherent_alpha_model(mod1_spec.xaxis, mod1_spec.flux, mod2_spec.flux,\n",
+    "    iam_grid_func = inherent_alpha_model(mod1_spec.xaxis, mod1_spec.flux, mod2_spec.flux,\n",
     "                                             rvs=rv, gammas=gamma)\n",
     "    if wav is None:\n",
     "        delta = spec_max_delta(mod1_spec, rv, gamma)\n",
@@ -114,11 +110,10 @@
     "    \n",
     "    \n",
     "    x_wav, y_wav = fake_simulation(np.linspace(2090, 2150, 2000), params1,\n",
-    "                                   params2, gamma, rv, chip=1, independent=independent, noise=noise)\n",
+    "                                   params2, gamma, rv, chip=1, noise=noise)\n",
     "\n",
     "    \n",
-    "    x, y = fake_simulation(None, params1, params2, gamma, rv, chip=1,\n",
-    "                           independent=independent, noise=noise)\n",
+    "    x, y = fake_simulation(None, params1, params2, gamma, rv, chip=1, noise=noise)\n",
     "    print(x)\n",
     "    \n",
     "    plt.plot(x, y, label=\"Fake simulation\")\n",
