--- a/Notebooks/Companion SNR analysis.ipynb
+++ b/Notebooks/Companion SNR analysis.ipynb
@@ -156,13 +156,7 @@
       "    line for line in traceback.format_stack()\n",
       "\n",
       "\n",
-      "  matplotlib.use('Agg')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  matplotlib.use('Agg')\n",
       "/home/jneal/Phd/Codes/companion_simulations/mingle/utilities/__init__.py:3: UserWarning: \n",
       "This call to matplotlib.use() has no effect because the backend has already\n",
       "been chosen; matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
@@ -769,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
